[gd_scene load_steps=7 format=3 uid="uid://c1yb1uf1ninl6"]

[ext_resource type="Script" path="res://CharacterController.gd" id="1_4k4q3"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3D.gd" id="2_2iygo"]
[ext_resource type="Texture2D" uid="uid://higridtbmm4k" path="res://icon.svg" id="3_bhudq"]

[sub_resource type="SphereMesh" id="SphereMesh_1wp4y"]

[sub_resource type="SphereShape3D" id="SphereShape3D_8rfy2"]

[sub_resource type="LabelSettings" id="LabelSettings_pp0n4"]
font_size = 64

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_layer = 3
script = ExtResource("1_4k4q3")

[node name="Mesh" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_1wp4y")

[node name="Collider" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_8rfy2")

[node name="PhantomCamera3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.812628, 0.582782, 0, -0.582782, 0.812628, 0, 3.53553, 3.53553)
script = ExtResource("2_2iygo")
priority_override = false
priority = 2
follow_mode = 1
follow_target = NodePath("../CameraArm/FollowTarget")
follow_parameters/damping = false
look_at_mode = 2
look_at_target = NodePath("..")
look_at_parameters/look_at_target_offset = Vector3(0, 1, 0)
tween_parameters = null
tween_on_load = true
inactive_update_mode = 0
camera_3D_resource = null

[node name="ChaseRay" type="RayCast3D" parent="PhantomCamera3D"]
target_position = Vector3(0, 0, -10)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="CameraArm" type="SpringArm3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)
spring_length = 5.0
margin = 0.2

[node name="FollowTarget" type="Node3D" parent="CameraArm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Crosshair" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_bhudq")
expand_mode = 2

[node name="FoundLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -13.0
offset_right = 74.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "YOU WERE FOUND!"
label_settings = SubResource("LabelSettings_pp0n4")
